# tvsc

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  BUILD.bazel  CODEOWNERS  LICENSE  README.md  WORKSPACE  full_build.sh
base/: BUILD.bazel  bits.h  bits_test.cc  enums.h  except.h  except_test.cc  except_with_glog.h  except_without_glog.h  initializer.cc  initializer.h  initializer_noop.cc  units.h
bringup/: BUILD.bazel  adc_demo.cc  blink.cc  blink.h  blink_multiple_leds.cc  can_bus_receive.cc  can_bus_transmit.cc  can_rx.h  can_tx.h  dac_demo.cc  dac_demo.h  echo_client.cc  echo_server.cc  fetch_imu_ids.cc  flash_target.cc  flash_target.h  monitor_imu.cc  monitor_imu.h  monitor_power.cc  monitor_power.h  power_demo.cc  process_messages.h  quit.h  random_blink.cc  random_blink.h  read_board_id.cc  read_board_id.h  read_board_id_blocking.cc  read_target_swdp_id.cc  read_target_swdp_id_with_reset.cc  reset_target_board.cc  satellite.cc  scan_i2c.cc  streaming_adc.cc  systick_blink_demo.cc  timer_demo.cc  watchdog.h  watchdog_demo.cc
buffer/: BUILD.bazel  README.md  blocking_data_sink.h  buffer.h  buffer_test.cc  packet_queue.h  packet_queue_test.cc  ring_buffer.h  ring_buffer_test.cc
bus/gpio/: BUILD.bazel  blink.cc  blink_pin_mapping_odroid_default.cc  blink_pin_mapping_teensy_default.cc  pins.h  teensyduino_time.cc  time.h
bus/spi/: BUILD.bazel  spi.cc  spi.h  spidev_spi.cc  teensyduino_spi.cc
configuration/: BUILD.bazel  allowed_values.cc  allowed_values.h  allowed_values_test.cc  configuration.cc  configuration.h  configuration_test.cc  configuration_usability_test.cc  fake_systems.h  function_test.cc  serialization.h  serialization_nanopb.cc  serialization_proto.cc  serialization_test.cc  system_configuration.cc  system_configuration.h  system_configuration_test.cc  system_definition.cc  system_definition.h  system_definition_test.cc  system_definition_usability_test.cc  types.cc  types.h  utility.h
control/: BUILD.bazel  categorical_parameter_domain_test.cc  combined_parameter_domains.h  combined_parameter_domains_test.cc  combined_parameter_test.cc  combined_parameters.h  combined_parameters_test.cc  continuous_parameter_domain_test.cc  discrete_parameter.h  discrete_parameter_domain.h  discrete_parameter_domain_test.cc  discrete_parameter_test.cc  excluded_parameter_domains.h  excluded_parameter_domains_test.cc  excluded_parameters.h  excluded_parameters_test.cc  parameter.h  parameter_domain.h  parameter_domains.h  parameters.h  ranged_parameter.h  ranged_parameter_domain.h  ranged_parameter_domain_test.cc  ranged_parameter_test.cc
discovery/: BUILD.bazel  browse_services.cc  network_address_utils.cc  network_address_utils.h  publish_test_service.cc  service_advertiser.cc  service_advertiser.h  service_browser.cc  service_browser.h  service_descriptor.h  service_descriptor.proto  service_discovery.cc  service_discovery.h  service_resolver.cc  service_resolver.h  service_types.cc  service_types.h
filesystem/: BUILD.bazel  utils.cc  utils.h  utils_test.cc
hal/: BUILD.bazel  README.md  chrono_utils.h  enable_lock.h  error.cc  error.h  error_loop.cc  error_terminate.cc  interceptor.h  irq.h  irq_noop.h  peripheral.h  peripheral_id.h  power_token.h  register.h  register_test.cc  stm32_peripheral_ids.h  time_type.h
hash/: BUILD.bazel  hash_combine.h  hash_combine_test.cc  integer_hash.h
hello/: BUILD.bazel
http/: BUILD.bazel  README.md  simple_http_server.cc  static_file_server.h
io/: BUILD.bazel  file_data_source.h  file_reader.h  file_reader_test.cc  looping_file_reader.h  looping_file_reader_test.cc  lorem_ipsum.txt  managed_directory.cc  managed_directory.h  session_directory.cc  session_directory.h  temp_filename.cc  temp_filename.h
message/: BUILD.bazel  announce.h  handler.h  leds.h  message.h  processor.h  queue.h  queue_test.cc  ring_buffer.h
meta/: BUILD.bazel  build_time.cc  build_time.cc.tpl  build_time.h  build_time.h.tpl  firmware.cc  firmware.h  flash.h
package/: BUILD.bazel
packet/: BUILD.bazel  encoding.h  encoding_test.cc  packet.cc  packet.h  packet_queue.h  packet_queue_test.cc
profile/: BUILD.bazel  profile.h
proto/: BUILD.bazel  proto_file_reader.cc  proto_file_reader.h  proto_file_writer.cc  proto_file_writer.h  proto_writer.h
pubsub/: BUILD.bazel  pub_sub_service.h  pub_sub_service_test.cc  publication_service_test.cc  streamer.h  test.proto  topic.h  web_socket_topic.h
radio/: BUILD.bazel  README.md  dummy_receiver.cc  dummy_receiver.h  echo_client.cc  echo_server.cc  encoding.h  encoding_test.cc  fragment.h  list_devices.cc  loop_receive.cc  loop_send.cc  mock_radio.h  mock_radio_test.cc  mock_transceiver.h  packet.cc  packet.h  packet.nanopb.proto  packet.proto  packet_assembler.h  packet_queue.h  packet_queue_test.cc  packet_test.cc  radio.h  radio.nanopb.proto  radio.proto  radio_configuration.h  radio_configuration_test.cc  radio_head_rf69_configuration.h  radio_module.h  radio_utilities.h  repeater.cc  rf69hcw.cc  rf69hcw.h  rf69hcw_configuration.h  rf69hcw_configuration_test.cc  rh_rf69_configuration.h  rh_rf69_configuration_test.cc  settings.h  settings.nanopb.proto  (+23 more)
random/: BUILD.bazel  arduino_random.h  random.h  random_number_generator.cc  std_cpp_random.cc  std_cpp_random.h  stm32_random.cc
scheduler/: BUILD.bazel  sample_tasks.h  scheduler.h  scheduler_test.cc  task.h  task_test.cc
serial_wire/: BUILD.bazel  firmware.cc  firmware.h  flash.cc  flash.h  serial_wire.cc  serial_wire.h  target.cc  target.h
services/: BUILD.bazel  pub_sub_service.h  pub_sub_service_test.cc  test.proto  test_response_reader.h  version.bzl  web_socket_topic.h
system/: BUILD.bazel  sample_tasks.h  scheduler.h  scheduler_test.cc  system.cc  system.h  task.h  task_test.cc
testing/: BUILD.bazel  test_temp_directory.cc  test_temp_directory.h  utils.h
time/: BUILD.bazel  chrono_utils.h  clock.h  clockable.h  embedded_clock.cc  embedded_clock.h  mock_clock.h  mock_clock_test.cc  remote_clock.cc  remote_clock.h  remote_clock_test.cc  scaled_clock.h  teensyduino_clock.cc  teensyduino_clock.h  teensyduino_time.cc
(+1300 files in other folders)
