filegroup(
    name = "linker_script",
    srcs = select({
        "//platforms:nucleo_l412kb_board": [
            "//toolchain/nucleo_l4:stm32l412xx_flash_linker_script",
        ],
        "//platforms:nucleo_l432kc_board": [
            "//toolchain/nucleo_l4:stm32l432xx_flash_linker_script",
        ],
        "//platforms:nucleo_l452re_board": [
            "//toolchain/nucleo_l4:stm32l452xx_flash_linker_script",
        ],
        "//platforms:feature_bringup_board": [
            "//toolchain/nucleo_l4:stm32l452xx_flash_linker_script",
        ],
    }),
    target_compatible_with = [
        "@platforms//os:none",
    ],
)

cc_library(
    name = "tasks",
    hdrs = [
        "blink.h",
        "dac_demo.h",
        "monitor_imu.h",
        "monitor_power.h",
        "quit.h",
        "random_blink.h",
        "watchdog.h",
    ],
    deps = [
        "//flags",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//hal/power_monitor",
        "//random",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "blink",
    srcs = [
        "blink.cc",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//profile",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "blink.elf",
    srcs = [
        "blink.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "monitor_imu.elf",
    srcs = [
        "monitor_imu.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/imu",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "monitor_power.elf",
    srcs = [
        "monitor_power.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/power_monitor",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "blink_multiple_leds.elf",
    srcs = [
        "blink_multiple_leds.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "random_blink.elf",
    srcs = [
        "random_blink.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//random",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "adc_demo.elf",
    srcs = [
        "adc_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//platforms:no_dac": ["@platforms//:incompatible"],
        "//platforms:no_adc": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "streaming_adc.elf",
    srcs = [
        "streaming_adc.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//platforms:no_dac": ["@platforms//:incompatible"],
        "//platforms:no_adc": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "dac_demo.elf",
    srcs = [
        "dac_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//platforms:no_dac": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "power_demo.elf",
    srcs = [
        "power_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "read_board_id.elf",
    srcs = [
        "read_board_id.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//platforms:no_adc": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//base",
        "//hal",
        "//hal/board",
        "//hal/adc",
        "//hal/gpio",
        "//scheduler",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "scan_i2c.elf",
    srcs = [
        "scan_i2c.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_i2c": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//base",
        "//hal",
        "//hal/board",
        "//hal/i2c",
    ],
)

cc_binary(
    name = "fetch_imu_ids.elf",
    srcs = [
        "fetch_imu_ids.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_i2c": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//base",
        "//hal",
        "//hal/board",
    ],
)

cc_binary(
    name = "timer_demo.elf",
    srcs = [
        "timer_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "//platforms:no_gpio": ["@platforms//:incompatible"],
        "//platforms:no_debug_led": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//base",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//hal/timer",
    ],
)

cc_binary(
    name = "systick_blink_demo.elf",
    srcs = [
        "systick_blink_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "@platforms//os:none": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":tasks",
        "//base",
        "//flags",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//profile",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "systick_blink_demo",
    srcs = [
        "systick_blink_demo.cc",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":tasks",
        "//base",
        "//flags",
        "//hal",
        "//hal/board",
        "//hal/gpio",
        "//profile",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "watchdog_demo.elf",
    srcs = [
        "watchdog_demo.cc",
    ],
    additional_linker_inputs = [
        ":linker_script",
    ],
    linkopts = ["-Wl,-T$(execpath :linker_script)"],
    target_compatible_with = select({
        "@platforms//os:none": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/watchdog",
        "//time:embedded_clock",
    ],
)

cc_binary(
    name = "watchdog_demo",
    srcs = [
        "watchdog_demo.cc",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":tasks",
        "//base",
        "//hal",
        "//hal/board",
        "//hal/watchdog",
        "//time:embedded_clock",
    ],
)
