cc_library(
    name = "buffer",
    hdrs = [
        "blocking_data_sink.h",
        "buffer.h",
        "packet_queue.h",
        "ring_buffer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//random",
    ],
)

cc_test(
    name = "buffer_test",
    srcs = ["buffer_test.cc"],
    deps = [
        ":buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "ring_buffer_test",
    srcs = ["ring_buffer_test.cc"],
    deps = [
        ":buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "packet_queue_test",
    srcs = ["packet_queue_test.cc"],
    deps = [
        ":buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
