cc_library(
    name = "buffer",
    hdrs = [
        "blocking_data_sink.h",
        "buffer.h",
        "ring_buffer.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "buffer_test",
    srcs = ["buffer_test.cc"],
    deps = [
        ":buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "ring_buffer_test",
    srcs = ["ring_buffer_test.cc"],
    deps = [
        ":buffer",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)
