cc_library(
    name = "control",
    hdrs = [
        "combined_parameters.h",
        "discrete_parameter.h",
        "excluded_parameters.h",
        "parameter.h",
        "parameters.h",
        "ranged_parameter.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glog",
    ],
)

cc_test(
    name = "discrete_parameter_test",
    srcs = ["discrete_parameter_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "ranged_parameter_test",
    srcs = ["ranged_parameter_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "combined_parameters_test",
    srcs = ["combined_parameters_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "excluded_parameters_test",
    srcs = ["excluded_parameters_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)
