cc_library(
    name = "control",
    hdrs = [
        "combined_parameter_domains.h",
        "discrete_parameter_domain.h",
        "excluded_parameter_domains.h",
        "parameter_domain.h",
        "parameter_domains.h",
        "ranged_parameter_domain.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glog",
    ],
)

cc_test(
    name = "discrete_parameter_domain_test",
    srcs = ["discrete_parameter_domain_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "ranged_parameter_domain_test",
    srcs = ["ranged_parameter_domain_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "combined_parameter_domains_test",
    srcs = ["combined_parameter_domains_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "excluded_parameter_domains_test",
    srcs = ["excluded_parameter_domains_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)
