cc_library(
    name = "control",
    hdrs = [
        "parameter_domain.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glog",
    ],
)

cc_test(
    name = "categorical_parameter_domain_test",
    srcs = ["categorical_parameter_domain_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "continuous_parameter_domain_test",
    srcs = ["continuous_parameter_domain_test.cc"],
    deps = [
        ":control",
        "//third_party/gtest",
    ],
)
