cc_library(
    name = "advertise",
    srcs = [
        "service_advertiser.cc",
    ],
    hdrs = [
        "service_advertiser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":service_descriptor_cc_proto",
        "//third_party/avahi",
        "//third_party/glog",
    ],
)

cc_library(
    name = "browse",
    srcs = [
        "service_browser.cc",
    ],
    hdrs = [
        "service_browser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":service_descriptor_cc_proto",
        "//third_party/avahi",
        "//third_party/glog",
    ],
)

filegroup(
    name = "service_descriptor_proto_file",
    srcs = ["service_descriptor.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "service_descriptor_proto",
    srcs = ["service_descriptor.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "service_descriptor_cc_proto",
    deps = [":service_descriptor_proto"],
)

cc_binary(
    name = "publish_test_service",
    srcs = [
        "publish_test_service.cc",
    ],
    deps = [
        ":advertise",
        ":service_descriptor_cc_proto",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)

cc_binary(
    name = "browse_services",
    srcs = [
        "browse_services.cc",
    ],
    deps = [
        ":browse",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)
