cc_library(
    name = "discovery",
    srcs = [
        "network_address_utils.cc",
        "service_types.cc",
    ],
    hdrs = [
        "network_address_utils.h",
        "service_types.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":service_descriptor_cc_proto",
        "//third_party/avahi",
        "//third_party/glog",
        "//third_party/grpc",
    ],
)

cc_library(
    name = "advertise",
    srcs = [
        "service_advertiser.cc",
    ],
    hdrs = [
        "service_advertiser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":discovery",
        ":service_descriptor_cc_proto",
        "//third_party/avahi",
        "//third_party/glog",
    ],
)

cc_library(
    name = "resolve",
    srcs = [
        "service_discovery.cc",
        "service_resolver.cc",
    ],
    hdrs = [
        "service_discovery.h",
        "service_resolver.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":discovery",
        ":service_descriptor_cc_proto",
        "//third_party/avahi",
        "//third_party/glog",
        "//third_party/grpc",
    ],
)

filegroup(
    name = "service_descriptor_proto_file",
    srcs = ["service_descriptor.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "service_descriptor_proto",
    srcs = ["service_descriptor.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "service_descriptor_cc_proto",
    deps = [":service_descriptor_proto"],
)

cc_binary(
    name = "publish_test_service",
    srcs = [
        "publish_test_service.cc",
    ],
    deps = [
        ":advertise",
        ":service_descriptor_cc_proto",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)

cc_binary(
    name = "browse_services",
    srcs = [
        "browse_services.cc",
    ],
    deps = [
        ":resolve",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)
