cc_library(
    name = "filesystem",
    srcs = [
        "utils.cc",
    ],
    hdrs = [
        "utils.h",
    ],
    linkopts = ["-lstdc++fs"],
    target_compatible_with = select(
        {
            "@platforms//os:none": [
                "@platforms//:incompatible",
            ],
            "//conditions:default": [],
        },
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/glog",
    ],
)

cc_test(
    name = "utils_test",
    srcs = ["utils_test.cc"],
    deps = [
        ":filesystem",
        "//third_party/gtest",
    ],
)
